[package]
name = "reno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.17", features = ["derive"] }
glob = "0.3.1"
rayon = "1.7.0"
regex = "1.9.1"
thiserror = "1.0.43"
walkdir = "2"
ignore = "0.4.11"
bitflags = "1.2"
itertools = "0.11.0"
entropy-lib = "1.0.2"
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"
chardet = "0.2.4"
tempfile = "3.7.0"
bytes = "1.4.0"
